--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>prism-data-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Nexapanel - All-in-One Business Dashboard for Smarter Operations</title>
+    <meta name="Nexapanel – the ultimate business dashboard to manage your operations, tools, and data in one place. Simplify workflows and stay in control." content="Lovable Generated Project" />
 
-    <meta property="og:title" content="prism-data-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Nexapanel" />
+    <meta property="og:Nexapanel – the ultimate business dashboard to manage your operations, tools, and data in one place. Simplify workflows and stay in control." content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="Nexapanel" />
   </head>
 
   <body>
